<resources>
    <string name="app_name">Buscamines</string>
    <string name="Boton1">Ayuda</string>
    <string name="Boton2">Empezar partida</string>
    <string name="Boton3">Salir</string>
    <string name="alias_identificativo">Alias Identificativo</string>
    <string name="alias">Alias</string>
    <string name="control_de_tiempo">Control de Tiempo</string>
    <string name="mida_graella">Mida Graella</string>
    <string name="de_minas">% De Minas</string>
    <string name="empezar">Empezar</string>
    <string name="_15">15%</string>
    <string name="_25">25%</string>
    <string name="_35">35%</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="ayuda">AYUDA</string>
    <string name="bienvenido_al_juego_del_buscaminas">Bienvenido al juego del BuscaMinas!</string>
    <string name="el_juego_consiste_en_despejar_todas_las_casillas_de_una_parrilla_que_no_oculten_una_mina">El juego consiste en despejar todas las casillas de una parrilla que no oculten una mina.</string>
    <string name="algunas_casillas_tienen_un_n_mero_este_n_mero_indica_las_minas_que_suman_todas_las_casillas_circundantes_as_si_una_casilla_tiene_el_n_mero_3_significa_que_de_las_ocho_casillas_que_hay_alrededor_si_no_es_en_una_esquina_o_borde_hay_3_con_minas_y_5_sin_minas">Algunas casillas tienen un número, este número indica las minas que suman todas las casillas circundantes. Así, si una casilla tiene el número 3, significa que de las ocho casillas que hay alrededor (si no es en una esquina o borde) hay 3 con minas y 5 sin minas.</string>
    <string name="si_se_descubre_una_casilla_con_una_mina_se_pierde_la_partida_en_otro_caso_si_descubres_todas_las_casillas_sin_mina_ganas">Si se descubre una casilla con una mina SE PIERDE la partida. En otro caso, si descubres todas las casillas sin mina, GANAS.</string>
    <string name="puedes_configurar_el_n_de_filas_de_la_parrilla_el_porcentaje_de_minas_en_la_misma_y_si_quieres_que_haya_un_tiempo_m_ximo_para_completar_el_juego">Puedes configurar el nº de filas de la parrilla, el porcentaje de minas en la misma y si quieres que haya un tiempo máximo para completar el juego.</string>
    <string name="volver_al_men">Volver al menú</string>
    <string name="caselles">Caselles</string>
    <string name="partida">PARTIDA</string>
    <string name="timer_off">Timer Off</string>
    <string name="d_a_y_hora">Día y hora</string>
    <string name="valores_del_log">Valores del Log</string>
    <string name="e_mail_destinario">E-mail destinario</string>
    <string name="duchpons_gmail_com">duchpons@gmail.com</string>
    <string name="enviar_e_mail">Enviar e-mail</string>
    <string name="nueva_partida">Nueva Partida</string>
    <string name="salir">Salir</string>
</resources>